# yyangtech_wordpress_com

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  project.config
2018_12_27/: CMakeLists.txt  defines.h  ldap_connection.h  test_global_option.cpp  test_handle_option.cpp
2019_02_05/: lifetime_of_a_temporary.cpp
2019_02_26/: CMakeLists.txt  lifetime_of_a_temporary.cpp
2019_07_11/: CMakeLists.txt  install_monetdb_deb.sh  problematic_test.py  setup_db_environment.py
scripts/: astyle.rc  astyle_and_build.sh
